[package]
name = "speedhack_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "speedhack"
crate-type = ['cdylib']

[dependencies]
anyhow = "1"
once_cell = "1.17.1"

retour = "0.1"

rust_hooking_utils = {git = "https://github.com/Hirtol/rust_hooking_utils", features = ["dinput8", "hooking-rawinput"]}

windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Performance", "Win32_UI_Input_KeyboardAndMouse"] }
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Performance", "Win32_System_SystemInformation"] }

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
