[package]
name = "speedhack_version_proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "version"
crate-type = ['cdylib']

[dependencies]
rust_hooking_utils.workspace = true
speedhack_rs = {path = "../speedhack_rs"}
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader"]}

[build-dependencies]
forward-dll.workspace = true